--- a/_posts/2019-11-2-字节跳动面试题目-扑克牌的移动.md
+++ b/_posts/2019-11-2-字节跳动面试题目-扑克牌的移动.md
@@ -3,7 +3,7 @@ layout:     post
 title:      字节跳动面试题目
 subtitle:   扑克牌的移动
 date:       2019-11-02
-author:     BY
+author:     MakeSail
 header-img: img/post-bg-ios9-web.jpg
 catalog: true
 tags:
