--- a/_posts/2019-11-3-JS函数进阶-理解函数调用.md
+++ b/_posts/2019-11-3-JS函数进阶-理解函数调用.md
@@ -3,7 +3,7 @@ layout:     post
 title:      JavaScript学习-函数进阶
 subtitle:   理解函数调用
 date:       2019-11-03
-author:     BY
+author:     MakeSail
 header-img: img/post-bg-2015.jpg
 catalog: true
 tags:
