--- a/_posts/2019-11-3-Js精通函数.md
+++ b/_posts/2019-11-3-Js精通函数.md
@@ -3,7 +3,7 @@ layout:     post
 title:      JavaScript学习-精通函数
 subtitle:   闭包和作用域
 date:       2019-11-03
-author:     BY
+author:     MakeSail
 header-img: img/post-bg-ioses.jpg
 catalog: true
 tags:
