--- a/_posts/2020-08-22-class字节码解析实战.md
+++ b/_posts/2020-08-22-class字节码解析实战.md
@@ -2,7 +2,7 @@
 layout:     post
 title:      Java-class字节码解析实战
 subtitle:   解析class文件
-date:       2020-08.22
+date:       2020-08-22
 author:     MakeSail
 header-img: img/post-bg-ioses.jpg
 catalog: true
