--- a/_posts/2020-08-22-class字节码解析实战.md
+++ b/_posts/2020-08-22-class字节码解析实战.md
@@ -629,6 +629,26 @@ public static ConstantInfo createConstantInfo(FileInputStream fi) {
 
 ##### CONSTANT_Utf8_info
 
-```java
+需要读出的长度由length决定，而length是一个u2类型的数。所以只需要先读出字符串所占的长度，就可以读出来bytes，然后将byte数组转为字符串即可。
 
+```java
+public class ConstantUtf8Info extends ReadBytes implements ConstantInfo {
+    private String constantString;
+
+    public ConstantUtf8Info(FileInputStream fi, int length) {
+        super(fi, length);
+        constantString = new String(bytes, Charset.defaultCharset());
+    }
+
+    public String getConstantString() {
+        return constantString;
+    }
+
+    @Override
+    public String toString() {
+        return "#" + " = Utf8" + "          " + constantString;
+    }
+}
 ```
+
+##### CONSTANT_Integer_info
