--- a/_posts/2020-08-22-2020年半年计划.md
+++ b/_posts/2020-08-22-2020年半年计划.md
@@ -14,7 +14,7 @@ tags:
 
 不知不觉已经入职了3个月了，深感工作与学习需要同时进行，不然会原地踏步，毫无进步。故希望自己没隔半年给自己定一个半年计划，每半年再去回顾与总结。
 
-> 无论什么事情，都不能着急，慢跑总不停下来好。
+> 无论什么事情，都不能着急，慢跑总比停下来好。
 
 ## 基础技术学习
 
