缓慢的学习，注意力不集中

--- a/_posts/2020-08-22-class字节码解析实战.md
+++ b/_posts/2020-08-22-class字节码解析实战.md
@@ -652,3 +652,204 @@ public class ConstantUtf8Info extends ReadBytes implements ConstantInfo {
 ```
 
 ##### CONSTANT_Integer_info
+
+存放被final修饰的常量整形数，四个字节刚好可以容纳一个Java的int型常量，事实上比int更小的boolean、byte、short和char类型的常量也放在CONSTANT_Integer_info中。
+
+该类型在字节码文件中的构成也很简单，由tag和四个字节的byte表示。所以也只需要简单的将四个字节读出，再转化为整数既可。
+
+```java
+public class ConstantIntegerInfo extends ReadBytes implements ConstantInfo {
+    private static final int length = UKind.U4;
+    private int value;
+    public ConstantIntegerInfo(FileInputStream fileInputStream) {
+        super(fileInputStream, length);
+        value = HexUtils.bytes2Int(bytes);
+    }
+
+    @Override
+    public String toString() {
+        return super.toString();
+    }
+}
+
+```
+
+##### CONSTANT_Float_info
+
+存放被final 修饰的单精度浮点数
+
+```java
+public class ConstantFloatInfo extends ReadBytes implements ConstantInfo{
+    private static final int length = UKind.U4;
+    private float value;
+    public ConstantFloatInfo(FileInputStream fileInputStream) {
+        super(fileInputStream, length);
+        value = HexUtils.bytes2Float(bytes);
+    }
+
+    @Override
+    public String toString() {
+        return super.toString();
+    }
+}
+
+```
+
+##### Constant_Long_info
+
+存放被final 修饰的 64位有符号的以补码表示的整数
+
+```java
+public class ConstantLongInfo extends ReadBytes implements ConstantInfo {
+    private static final int length = UKind.U8;
+    private long value;
+    public ConstantLongInfo(FileInputStream fileInputStream) {
+        super(fileInputStream, length);
+        value = HexUtils.bytes2Long(bytes);
+    }
+
+    @Override
+    public String toString() {
+        return super.toString();
+    }
+}
+```
+
+##### CONSTANT_Double_info
+
+存放被final 修饰的双精度浮点型
+
+```java
+public class ConstantDoubleInfo extends ReadBytes implements ConstantInfo  {
+    private static final int length = UKind.U8;
+    private double value;
+    public ConstantDoubleInfo(FileInputStream fileInputStream) {
+        super(fileInputStream, length);
+        value = HexUtils.bytes2Long(bytes);
+    }
+
+    @Override
+    public String toString() {
+        return super.toString();
+    }
+}
+```
+
+##### CONSTANT_Class_info
+
+存放了类的全限定名常量项的索引，该索引指向了全限定名常量项
+
+```java
+public class ConstantClassInfo implements ConstantInfo {
+    private Index indexRef;
+
+    public ConstantClassInfo(FileInputStream fi) {
+
+        indexRef = new Index(fi);
+    }
+
+    public int getIndexRef() {
+        return indexRef.getIndex();
+    }
+
+    @Override
+    public String toString() {
+        return "#"  + " = Class" + "           " + "#" + getIndexRef();
+    }
+}
+
+```
+
+##### CONSTANT_String_info
+
+存放了字符串字面量的索引
+
+```java
+public class ConstantStringInfo implements ConstantInfo {
+    private Index stringIndex;
+    public ConstantStringInfo(FileInputStream fi) {
+        stringIndex = new Index(fi);
+    }
+}
+```
+
+可以看到，几乎所有的类型都是一个套路，这里就不在一个一个说了。
+
+#### 访问标志
+
+在常量池结束之后，紧接着的两个字节代表访问标志，这个标志用于识别一些类或接口层次的访问信息。对于类、字段、方法和嵌套类有着不同的访问标志类型
+
+对于类（class），有以下访问标志
+
+* public
+* final
+* super
+* interface
+* abstract
+* synthetic
+* annotation
+* enum
+
+对于字段（field）
+
+* public
+* private
+* protected
+* static
+* final
+* volatile
+* transient
+* synthetic
+* enum
+
+对于方法（method）
+
+* public
+* private
+* protected
+* static
+* final
+* synchronized
+* bridge
+* varargs
+* native
+* abstract
+* static
+* synthetic
+
+对于嵌套类
+
+* public
+* private
+* protected
+* static
+* final
+* interface
+* abstract
+* synthetic
+* annotation
+* enum
+
+我们在判断标志之前，需要先判断一下类型，因为不同的标志可能会有一样的标志值，比如VOLATILE=0x0040 ，而BRIDGE=0x0040.
+
+<center face="黑体">类的访问标志</center>
+
+|标志名称|标志值|含义|
+|:----:|:----:|:----:|
+|ACC_PUBLIC|0x00001|是否为public类型|
+|ACC_FINAL|0x0010|是否为声明为final|
+|ACC_SUPER|0x0020|[是否允许使用invokespecial字节码指令的新语意](https://blog.csdn.net/dshf_1/article/details/105787923)
+|ACC_INTERFACE|0x0200|标识这是一个接口|
+|ACC_ABSTRACT|0x0400|是否为abstract类型|
+|ACC_SYNTHETIC|0x1000|标识这个类并非由用户代码产生的|
+|ACC_ANNOTATION|0x2000|标识这时一个注解|
+|ACC_ENUM|0x4000|标识这是一个枚举|
+
+
+<center face="黑体">字段的访问标志</center>
+|标志名称|标志值|含义|
+|:----:|:----:|:----:|
+|ACC_PUBLIC|
+|ACC_PRIVATE|
+|ACC_PROTECTED|
+|
